# ifs-cloud-core-mcp-server

./: .gitignore  CLI_API_SPECIFICATION.md  CONTEXT_WINDOW_GUIDE.md  EXTENDED_BATCH_ANALYSIS_REPORT.md  FINE_TUNING_README.md  GUI_IMPROVEMENTS.md  PARALLEL_PROCESSING_SETUP.md  PARALLEL_SOLUTION_SUMMARY.md  README.md  RTX5070TI_MAXIMUM_PERFORMANCE.md  RTX_5070_TI_BATCH_OPTIMIZATION_REPORT.md  RTX_5070_TI_FINAL_CONFIGURATION.md  RTX_5070_TI_UPDATED_CONFIGURATION.md  SAMPLES.md  SUPERVISED_TRAINING.md  TRUNCATION_TEST_RESULTS.md  TWO_PHASE_TRAINING_SUMMARY.md  UNIXCODER_VS_CLAUDE_GUIDE.md  analyze_bm25_content.py  analyze_ifs_codebase_keywords.py  analyze_plsql_characters.py  ast_function_extractor.py  attention_analysis.py  batch_optimization_results.json  batch_size_optimizer.py  benchmark_results.json  check_tensorrt_sdk.py  check_tensorrt_support.py  clean_keywords.py  cluster_remaining_words.py  compile_final_dataset.py  comprehensive_ifs_analysis_all_modules.json  comprehensive_ifs_analysis_all_modules.py  corrected_large_batch_test.py  enhanced_ifs_keywords_all_modules.json  enhanced_ifs_parser_real_patterns.py  evaluate_training_pipeline.py  extended_batch_analysis.json  extended_batch_analyzer.py  extract_curated_names.py  (+68 more)
scripts/: upload_to_github.py  upload_to_github_new.py
src/ifs_cloud_mcp_server/: __init__.py  analysis_processor.py  directory_utils.py  embedding_processor.py  hybrid_search.py  indexer.py  main.py  server_fastmcp.py  server_fastmcp_broken_backup.py  server_fastmcp_clean.py  web_ui.py
test_index/metadata_index/: meta.json
wheels/: README.md
